<resources>
    <string name="app_name">Human Activity Recognition</string>
    <string name="app_name_short">HAR</string>
    <string name="select_video_desc">Click here to select a video from device storage</string>
    <string name="fab_open_camera_text">Open camera</string>
    <string name="title_settings">Settings</string>

    <string name="title_category_general">General</string>
    <string name="title_category_developer">Developer Options</string>
    <string name="title_settings_aspect_ratio">Aspect ratio</string>
    <string name="title_settings_top_results">Display top matches</string>
    <string name="summary_settings_top_results">Displays top 3 matches of all the labels</string>
    <string name="title_settings_probability">Show match probability</string>
    <string name="title_settings_fps">Show Fps</string>
    <string name="summary_settings_fps">Displays fps meter at top-right corner of the screen</string>
</resources>