<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_category_general">
        <ListPreference
            app:defaultValue="1"
            app:entries="@array/aspect_ratio_titles"
            app:entryValues="@array/aspect_ratio_values"
            app:key="aspect_ratio"
            app:title="@string/title_settings_aspect_ratio"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/title_category_developer">
        <SwitchPreference
            app:key="display_top_3_results"
            app:summary="@string/summary_settings_top_results"
            app:title="@string/title_settings_top_results" />

        <SwitchPreference
            app:key="display_probability"
            app:title="@string/title_settings_probability" />

        <SwitchPreference
            app:key="fps"
            app:summary="@string/summary_settings_fps"
            app:title="@string/title_settings_fps" />
    </PreferenceCategory>

    <PreferenceCategory>
        <Preference app:title="About HAR" />
    </PreferenceCategory>
</PreferenceScreen>